added new apis
new api + abasic authorization + structire update
