# models/group.py
@@ -1,19 +1,17 @@
-from sqlalchemy import create_engine, Column, Integer, Float, String, ForeignKey
-from sqlalchemy.orm import declarative_base, sessionmaker, relationship
+from sqlalchemy import create_engine, Column, Integer, String, ForeignKey
+from sqlalchemy.orm import relationship
 
-# import sqlalchemy
-from config.db_connection_info import DB_URL
+from marshmallow import Schema, fields
 
-engine = create_engine(DB_URL)
-BaseModel = declarative_base()
+from models import BaseModel
 
 class Group(BaseModel):
-    __tablename__ = "groups_"
+    __tablename__ = "groups"
 
     id = Column('group_id', Integer, primary_key=True)
-    owner_id = Column(Integer, ForeignKey('users.id'), nullable=False)
+    owner_id = Column(Integer, ForeignKey('users.user_id'), nullable=False)
     name = Column(String(45), nullable=False)
-    password = Column(String(45), nullable=False)
+    secret_key = Column(String(45), nullable=False)
 
     members = relationship('Membership', backref='group')
     purchases = relationship('Purchase', backref='group_owner')
@@ -21,4 +19,12 @@ class Group(BaseModel):
         return f"id: {self.id}\n" \
                f"owner_id: {self.owner_id}\n" \
                f"name: {self.name}\n" \
-               f"password: {self.password}\n"
+               f"password: {self.secret_key}\n"
+
+class GroupBasicSerializer(Schema):
+    name = fields.String()
+class GroupInsensitiveSerializer(GroupBasicSerializer):
+    owner_id = fields.Number()
+class GroupSerializer(GroupInsensitiveSerializer):
+    id = fields.Number()
+    secret_key = fields.String()
