# models/service/error_codes.py
@@ -1,0 +1,4 @@
+INVALID_CREDENTIALS = 23
+SUCCESS = 20
+UNAUTHORIZED = 21
+NOT_FOUND = 24
